version/0.62/_sources/examples/extended_examples/index.rst.txt
.. _ref_extended_examples:

Extended Examples
=================


These extended examples aim to explain other concepts such as interoperability
with other programs, libraries, and features in development.

These examples are a work-in-progress and will be extended during the life of
this project.

+----------------------------+---------------------------------------------------------------------------------------------------------+
| Name                       | Description                                                                                             |
+----------------------------+---------------------------------------------------------------------------------------------------------+
| `Cart-Pole Simulation`_    | Demonstrates a reinforcement machine learning example using MAPDL through PyMAPDL.                      |
+----------------------------+---------------------------------------------------------------------------------------------------------+
| :ref:`extended_example01`  | Demonstrates the interoperability between PyMAPDL and the `gmsh <https://gmsh.info/>`_ meshing library. |
+----------------------------+---------------------------------------------------------------------------------------------------------+
| :ref:`python_upf_examples` | Demonstrates the interoperability between ``MAPDL`` user programmable functions and Python.             |
+----------------------------+---------------------------------------------------------------------------------------------------------+


.. _Cart-Pole Simulation: https://pyansys.github.io/ml-rl-cartpole/ml-rl-notebook.html
