version/0.64/_sources/examples/extended_examples/index.rst.txt
.. _ref_extended_examples:

Extended examples
=================


These extended examples explain other concepts such as interoperability
with other programs, libraries, and features in development.

+----------------------------+---------------------------------------------------------------------------------------------------------+
| Name                       | Description                                                                                             |
+----------------------------+---------------------------------------------------------------------------------------------------------+
| `Cart-Pole Simulation`_    | Demonstrates a reinforcement machine learning example using MAPDL through PyMAPDL.                      |
+----------------------------+---------------------------------------------------------------------------------------------------------+
| :ref:`extended_example01`  | Demonstrates the interoperability between PyMAPDL and the `gmsh <gmsh_>`_ meshing library.              |
+----------------------------+---------------------------------------------------------------------------------------------------------+
| :ref:`python_upf_examples` | Demonstrates the interoperability between user-programmable functions in MAPDL and Python.              |
+----------------------------+---------------------------------------------------------------------------------------------------------+
| :ref:`krylov_example`      | Demonstrates the usage of the Krylov method for solving a customized harmonic analysis.                 |
+----------------------------+---------------------------------------------------------------------------------------------------------+
| :ref:`dash_example`        | Demonstrates the use of PyMAPDL with Dash.                                                              |
+----------------------------+---------------------------------------------------------------------------------------------------------+
| :ref:`executable_example`  | Create your own Python app with a command-line interface.                                               |
+----------------------------+---------------------------------------------------------------------------------------------------------+


.. _Cart-Pole Simulation: https://pyansys.github.io/ml-rl-cartpole/ml-rl-notebook.html
